# GPBLUP

./: .gitignore  CMakeLists.txt  DEPLOYMENT_COMPLETE_REPORT.md  DEPLOYMENT_SUMMARY.md  GITHUB_DEPLOYMENT.md  GPBLUP_Program_Manual_English.md  LICENSE  README.md  deploy-to-github.sh
ReadFR/: CHANGELOG.md  HASH_TABLE_GUIDE.md  MAP_File_Structure.md  PED_HASH_TABLE_GUIDE.md  READFR_USER_MANUAL.md  README.md  ReadFR.f90
ReadFR/check/: K-Pig_FinalReport.txt  parameter
ReadFR/test/: PED_Total.txt  README.md  README_SAMPLE.txt  Sample_K_FinalReport_Tiny.txt  Sample_MAP_K.txt  Sample_MAP_K_Tiny.txt  Sample_MAP_V2.txt  Sample_V2_FinalReport.txt  Sample_V2_FinalReport_Tiny.txt  create_sample.sh  create_tiny_sample.sh  parameter  parameter.gpblup  parameter_10animals  parameter_10animals_ARN  parameter_V2_595animals  parameter_sample  parameter_tiny  test_readfr.sh
source/: M_HashTable.f90  M_Kinds.f90  M_PEDHashTable.f90  M_ReadFile.f90  M_Stamp.f90  M_StrEdit.f90  M_Variables.f90  M_param.f90  M_readpar.f90  Qsort4.f90
